@@ -16,7 +16,6 @@
 
 package org.springframework.boot.testsupport.web.servlet;
 
-import java.lang.reflect.InaccessibleObjectException;
 import java.net.URL;
 
 import org.junit.jupiter.api.extension.AfterEachCallback;
@@ -46,18 +45,12 @@ class DirtiesUrlFactoriesExtension implements BeforeEachCallback, AfterEachCallb
 	}
 
 	private void reset() {
-		try {
-			ClassLoader classLoader = getClass().getClassLoader();
-			if (ClassUtils.isPresent(TOMCAT_URL_STREAM_HANDLER_FACTORY, classLoader)) {
-				Class<?> factoryClass = ClassUtils.resolveClassName(TOMCAT_URL_STREAM_HANDLER_FACTORY, classLoader);
-				ReflectionTestUtils.setField(factoryClass, "instance", null);
-			}
-			ReflectionTestUtils.setField(URL.class, "factory", null);
+		ClassLoader classLoader = getClass().getClassLoader();
+		if (ClassUtils.isPresent(TOMCAT_URL_STREAM_HANDLER_FACTORY, classLoader)) {
+			Class<?> factoryClass = ClassUtils.resolveClassName(TOMCAT_URL_STREAM_HANDLER_FACTORY, classLoader);
+			ReflectionTestUtils.setField(factoryClass, "instance", null);
 		}
-		catch (InaccessibleObjectException ex) {
-			throw new IllegalStateException(
-					"Unable to reset field. Please run with '--add-opens=java.base/java.net=ALL-UNNAMED'", ex);
-		}
+		ReflectionTestUtils.setField(URL.class, "factory", null);
 	}
 
 }
